# EmbeddedLinux

./: .gitignore  CMakeLists.txt  CMakeSettings.json  GPATH  GRTAGS  GTAGS  README.md  client.c  led.c  s3c2410-dc-motor.c
client/: CMakeLists.txt  control.ui  control.ui.h  main.cpp  ncontrol.pro  searchthread.cpp  searchthread.h
server/: CMakeLists.txt  client.c  server.c  test.c
tcp/: CMakeLists.txt  serve.c  server.c
test_led/: CMakeLists.txt  CMakeProject1.cpp  test_led.c
tube/: s3c2410-led.c  test_led.c
